# conceptual_slipknot

./: .env.template  README.md  app.py  calls.py  essence_of_idea.txt  front.py  getting_structured_output.py  pyproject.toml  run  utils.py
code/: app.py  calls.py  utils.py
