[tool.poetry]
name        = "conceptual-slipknot"
version     = "0.1.0"
description = ""
authors     = ["William Payne <wtpayne@users.noreply.github.com>"]
readme      = "README.md"
packages    = [{ include = "conceptual-slipknot", from = "src" }]

[tool.poetry.dependencies]
python    = "^3.12"
mistralai = "^1.1.0"
streamlit = "^1.39.0"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
